<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp">

            <TextView
                android:id="@+id/textview_lab1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lab1"
                android:textSize="50dp"
                android:gravity="center"
                android:textColor="@color/LightGreen"
                android:background="@color/Black"
                />

        </LinearLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1"
                >

                <EditText
                    android:id="@+id/usernameEditText"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:gravity="center"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="20dp"
                    android:textSize="30dp"
                    android:inputType="textPersonName"
                    android:background="@color/Yellow"
                    android:text="@string/username_hint" />

                <TextView
                    android:id="@+id/textview_humber"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:text="@string/humber"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:textSize="30dp"
                    android:background="@color/Orchid"
                    />

                <TextView
                    android:id="@+id/textview_york"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:text="@string/york"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:textSize="30dp"
                    android:background="@color/LightGreen"
                    />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1"
                >

                <EditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:inputType="textPassword"
                    android:hint="@string/password_hint"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="0dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="20dp"
                    android:background="@color/Yellow"
                    android:gravity="center"
                    android:textSize="30dp"/>
                <TextView
                    android:id="@+id/textview_ryerson"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:text="@string/ryerson"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="0dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:textSize="30dp"
                    android:background="@color/Blue"
                    android:textColor="@color/White"
                    />

                <TextView
                    android:id="@+id/textview_seneca"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:text="@string/seneca"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="0dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:textSize="30dp"
                    android:background="@color/Red"
                    android:textColor="@color/White"
                    />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>


